--- a/.github/workflows/code-format-check.yml
+++ b/.github/workflows/code-format-check.yml
@@ -1,12 +1,8 @@
-name: Check C# Code Formatting
+name: Format Check
 
 on:
   push:
-    branches:
-      - master
   pull_request:
-    branches:
-      - master
 
 jobs:
   format-check:
@@ -16,13 +12,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup .NET
+      - name: Setup .NET 9.0
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '9.0.0-preview.4' 
+          dotnet-version: '9.0.200' 
 
       - name: Restore dependencies
         run: dotnet restore
 
-      - name: Check formatting
+      - name: Run dotnet format
         run: dotnet format --verify-no-changes
