--- a/.github/workflows/code-format-check.yml
+++ b/.github/workflows/code-format-check.yml
@@ -1,24 +1,27 @@
-name: Format Check
+name: .NET
 
 on:
   push:
-  pull_request:
+    branches: [ "master" ]
 
 jobs:
-  format-check:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup .NET 9.0
-        uses: actions/setup-dotnet@v3
+      - name: Setup .NET 
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.0.200' 
 
       - name: Restore dependencies
         run: dotnet restore
 
-      - name: Run dotnet format
+      - name: Build
+        run: dotnet build --no-restore
+
+      - name: Check code format
         run: dotnet format --verify-no-changes
