--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# This workflow will build a .NET project
+# This workflow will build a .NET project and check code formatting
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
 name: .NET
@@ -25,3 +25,8 @@ jobs:
 
     - name: Build
       run: dotnet build --no-restore
+
+    - name: Check code formatting
+      run: |
+        dotnet tool install -g dotnet-format
+        dotnet format --check --verbosity normal
